// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`--locale option 1`] = `
" {
   en: {
[32m+    nest: {[39m
[32m+      world: \\"world!\\"[39m
[32m+    }[39m
[31m-    hello: \\"世界\\"[39m
[32m+    hello: \\"hello!\\"[39m
   }
 }
"
`;

exports[`--target option 1`] = `
" {
   ja: {
[31m-    world: \\"ザ・ワールド\\"[39m
[32m+    nest: {[39m
[32m+      world: \\"世界！\\"[39m
[32m+    }[39m
[31m-    hello: \\"こんにちわわわ！\\"[39m
[32m+    hello: \\"こんにちは！\\"[39m
   }
 }
"
`;

exports[`--target-paths option 1`] = `
" {
[31m-  ja: {[39m
[31m-    hello: \\"こんにちわわわ！\\"[39m
[31m-    world: \\"ザ・ワールド\\"[39m
[31m-  }[39m
[31m-  lang: {[39m
[31m-    hello: \\"世界\\"[39m
[31m-  }[39m
   en: {
[32m+    nest: {[39m
[32m+      world: \\"world!\\"[39m
[32m+    }[39m
[31m-    hello: \\"world\\"[39m
[32m+    hello: \\"hello!\\"[39m
   }
 }
"
`;
